--- a/STest.App/STest.App/App.xaml
+++ b/STest.App/STest.App/App.xaml
@@ -3,7 +3,8 @@
     x:Class="STest.App.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:STest.App">
+    xmlns:local="using:STest.App" 
+    xmlns:utilities="using:STest.App.Utilities">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -11,7 +12,42 @@
                 <ResourceDictionary Source="/Controls/ConfirmationButton.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
+            <ControlTemplate 
+                x:Key="WindowWrapper" 
+                TargetType="ContentControl"
+            >
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="32" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                
+                    <Grid 
+                        Grid.Column="0"
+                        Grid.Row="0"
+                        Height="32"
+                        Margin="16,0"
+                    >
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock 
+                            Text="Student Testing Platform"
+                            Grid.Column="0"
+                            Grid.Row="0"
+                            FontWeight="Medium"
+                            FontSize="12"
+                            CharacterSpacing="25"
+                            VerticalAlignment="Center"
+                        />
+                    </Grid>
+                
+                    <ContentPresenter Grid.Column="0" Grid.Row="1" />
+                </Grid>
+            </ControlTemplate>
         </ResourceDictionary>
-
     </Application.Resources>
 </Application>
